# Long-Term-Finance-Analysis

./: .env.example  .gitignore  README.md  backtest.py  chart.py  config.py  data.py  finance_report_generator.py  main.py  pyproject.toml  requirements.txt  run.bat
.kiro/plan/: korean_data_addition.md  tasks.md
.kiro/steering/: product.md  structure.md  tech.md
data/: gold_krx.csv
src/: __init__.py  allocation.py  backtest.py  chart.py  config.py  indicators.py  main.py  models.py
src/fetchers/: __init__.py  krx_gold.py  pykrx.py  yfinance.py
tests/: test_backtest.py  test_fetchers_krx_gold.py  test_fetchers_pykrx.py  test_scoring.py
