[project]
name = "finanalysis"
version = "0.1.0"
description = "Technical-analysis chart generator for market tickers."
requires-python = ">=3.10"
dependencies = [
    "yfinance>=0.2",
    "plotly>=5.18",
    "pandas>=2.0",
    "python-dotenv>=1.0",
]

[project.scripts]
finanalysis = "src.main:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
